<resources>
    <string name="app_name">commonlibrary</string>
    <string name="android">Android</string>
    <string name="girls">妹子</string>
    <string name="settings">设置</string>
    <string name="request_data_error">请求数据出错</string>
    <string name="no_photos">没有可以浏览的图片</string>
    <string name="home_page">首页</string>
    <string name="history_date">干货历史</string>
    <string name="more">更多</string>
    <string name="classify_gank">分类干货</string>
    <string name="save_photo">保存图片</string>
    <string name="set_to_desktop_background">设为桌面背景</string>
    <string name="share">分享</string>
    <string name="no_photo_loaded">图片未加载</string>
    <string name="save_photo_succeed">保存图片成功</string>
    <string name="save_photo_failed">保存图片失败</string>
    <string name="cannot_get_storage_permission">未获取到存储权限</string>
    <string name="wallpaper_changed">桌面壁纸已更改</string>
    <string name="no_data">没有获取到数据...</string>
    <string name="trans_photo_name">trans_photo</string>
    <string name="you_want_dot">您想...</string>
    <string name="wechat_selected">微信精选</string>
    <string name="today_in_history">历史上的今天</string>
    <string name="share_app">分享App</string>
    <string name="author_ayvytr_github">Ayvytr的GitHub主页</string>
    <string name="author_ayvytr_github_url">https://github.com/ayvytr</string>
    <string name="get_today_in_history_error">获取历史上的今天失败！</string>
</resources>
