<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home_page"/>
        <item
            android:id="@+id/nav_gank_history"
            android:icon="@drawable/history"
            android:title="@string/history_date"/>
        <item
            android:id="@+id/nav_gank_of_type"
            android:icon="@drawable/category"
            android:title="@string/classify_gank"/>
        <item
            android:id="@+id/nav_today_in_history"
            android:icon="@drawable/today"
            android:title="@string/today_in_history"/>
        <!--<item-->
            <!--android:id="@+id/nav_wechat_selected"-->
            <!--android:icon="@drawable/wechat"-->
            <!--android:title="@string/wechat_selected"/>-->
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app"/>
        </menu>
    </item>

</menu>
